--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,24 @@
 version: "3.3"
 services:
+  db:
+    image: mysql:5.7
+    ports:
+      - "3306:3306"
+    entrypoint:
+      [
+        "docker-entrypoint.sh",
+        "--default-authentication-plugin=mysql_native_password",
+      ]
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: flow_dev
+      MYSQL_USER: api
+      MYSQL_PASSWORD: api
+    healthcheck:
+      test: '/usr/bin/mysql --user=api --password=api --execute "SHOW DATABASES;"'
+      interval: 10s
+      timeout: 1s
+      retries: 5
   api:
     build:
       context: .
