chore(build): added sleep 20 seconds to wait untill database is available for api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       context: .
       dockerfile: Dockerfile
     image: template-api
-    command: /bin/sh -c "/usr/api"
+    command: /bin/sh -c "sleep 30; /usr/api"
     ports:
       - "80:5000"
     env_file: .env
